--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Vivian Dsouza's Personal Webpage
 <!--div class="col"><a href="#section_grants"><h4 class="btn_menu">Grants</h4></a></div>
 <div class="col"><a href="#section_students"><h4 class="btn_menu">Students</h4></a></div>
 <div class="col"><a href="#section_teaching"><h4 class="btn_menu">Teaching</h4></a></div-->
-<div class="col"><a href="#section_career"><h4 class="btn_menu">Career</h4></a></div>
+<div class="col"><a href="#section_career"><h4 class="btn_menu">Education</h4></a></div>
 <!--div class="col"><a href="#section_service"><h4 class="btn_menu">Service</h4></a></div-->
 </div>
 
@@ -71,7 +71,7 @@ Vivian Dsouza's Personal Webpage
 </div>
 
 
-<div class="card" id="section_grants">
+<!--div class="card" id="section_grants">
 
 <h3>Major Research Grants</h3>
 
@@ -84,10 +84,10 @@ The list below summarizes the most important past and current research grants I 
 <li><a href="https://www.narcis.nl/research/RecordID/OND1348915/Language/en" target="_blank">Veni</a> <a class="btn_link_2" href="https://www.nwo.nl/en/researchprogrammes/nwo-talent-programme" target="_blank">Talent</a> <span class="btn">NL</span> <span class="hfill">2013–2016</span></li>
 </ul>
 
-</div>
+</div-->
 
 
-<div class="card" id="section_students">
+<!--div class="card" id="section_students">
 
 <h3>Postdocs and PhD Students Supervision</h3>
 
@@ -146,39 +146,26 @@ I am involved in the following courses at <a href="https://www.tudelft.nl/" targ
 <li> <a class="text_bold" href="https://studiegids.tudelft.nl/a101_displayCourse.do?course_id=61476" target="_blank">Mentorship [CSE1000]</a> <span class="btn_transparent">Academic Coordinator</span> <span class="btn">BSc course</span> <span class="hfill">2014–Now</span></li>
 </ul>
 
-</div>
+</div-->
 
 
 <div class="card" id="section_career">
 
-<h3>Academic Career and Education</h3>
-
-<h4 class="add_margin_top_positive">Academic Career</h4>
+<h3>Education</h3>
+<ul>
+<li><span class="text_bold">MSc:</span> <a class="text_bold" href="https://www.tudelft.nl/" target="_blank">TU Delft, The Netherlands</a> <span class="btn_transparent">Supervisor: <a href="https://www.st.ewi.tudelft.nl/marco/" target="_blank">Marco Zuniga</a></span> <span class="hfill">2020–2022</span></li>
 
 <ul>
-<li><span class="text_bold">Assistant Professor (with tenure):</span> <a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/software-technology/embedded-and-networked-systems/" target="_blank">Embedded and Networked Systems Group</a>, <a class="text_bold" href="https://www.tudelft.nl/" target="_blank">TU Delft, The Netherlands</a> <span class="hfill">2013–2021</span></li>
-
-<li><span class="text_bold">Research Scientist:</span> <a class="text_bold" href="https://www.hhi.fraunhofer.de/en/index.html" target="_blank">Fraunhofer Heinrich Hertz Institute, Germany</a> <span class="btn_transparent">Supervisor: <a href="https://www.netit.tu-berlin.de/menue/team/prof_dr_ing_slawomir_stanczak/" target="_blank">Sławomir Stańczak</a></span> <span class="hfill">2011–2013</span></li>
-
-<li><span class="text_bold"> Postdoc:</span> <a href="https://cores.ee.ucla.edu/" target="_blank">Cognitive Reconfigurable Embedded Systems Lab</a>, <a class="text_bold" href="https://www.ucla.edu/" target="_blank">UCLA, USA</a></h5> <span class="btn_transparent">Mentor: <a href="https://www.ee.ucla.edu/danijela-cabric/" target="_blank">Danijela Čabrić</a></span> <span class="hfill">2019–2011</span></li>
+<li>Thesis: <a class="text_italic" href="https://repository.tudelft.nl/islandora/object/uuid:195c9053-32c8-4470-9b26-26208e00c41d" target="_blank">Spectrum Aware Passive Visible Light Communication</a></li>
 </ul>
 
-<h4 class="add_margin_top_positive">Education</h4>
-
-<ul>
-<li><span class="text_bold">PhD:</span> <a class="text_bold" href="https://www.tudelft.nl/" target="_blank">TU Delft, The Netherlands</a> <span class="btn_transparent">Promotor: <a href="https://www.linkedin.com/in/ignas-niemegeers-09559715/" target="_blank">Ignas Niemegeers</a></span> <span class="hfill">2005–2009</span></li>
-
-<ul>
-<li>Thesis: <a class="text_italic" href="https://repository.tudelft.nl/islandora/object/uuid:7f7b27b2-a2f9-4366-9bda-8e722d12b188" target="_blank">Opportunistic Spectrum Access: Designing Link and Transport Layer</a></li>
-</ul>
-
-<li><span class="text_bold"> MSc:</span> <a class="text_bold" href="https://pwr.edu.pl/en/" target="_blank">Wrocław University of Science and Technology, Poland</a> <span class="hfill">1999–2004</span></li>
+<li><span class="text_bold"> BTech :</span> <a class="text_bold" href="https://manipal.edu/mit/program-list/btech/btech-mechatronics-engineering.html" target="_blank">Manipal Institute of Technology, India</a> <span class="hfill">2017–2020</span></li>
 </ul>
 
 </div>
 
 
-<div class="card" id="section_service">
+<!--div class="card" id="section_service">
 
 <h3>Recent Academic Service</h3>
 
@@ -205,12 +192,12 @@ I am involved in the following courses at <a href="https://www.tudelft.nl/" targ
 
 </ul>
 
-</div>
+</div-->
 
 
 <div class="card" id="footer">
 
-<p><span class="text_bold text_footer">Website source:</span> <a class="text_footer" href="https://github.com/przemyslaw-pawelczak/przemyslaw-pawelczak.github.io" target="_blank">przemyslaw-pawelczak.github.io</a> &nbsp; <span class="text_bold text_footer">Last update:</span> <span class="text_footer">February 10, 2023, 22:52 Delft Time</span></p>
+<p><span class="text_bold text_footer">Website adapted from:</span> <a class="text_footer" href="https://github.com/przemyslaw-pawelczak/przemyslaw-pawelczak.github.io" target="_blank">przemyslaw-pawelczak.github.io</a> &nbsp; <span class="text_bold text_footer">Last update:</span> <span class="text_footer">June 6, 2023</span></p>
 
 <div>
 
