--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Vivian Dsouza's Personal Webpage
 
 <h5 class="add_margin_bottom_negative"><a href="https://map.tudelftcampus.nl/poi/wiskunde-informatica-ewi/" target="_blank">Building 28, Room 2.W.760</a></h5>
 <h5 class="add_margin_top_negative add_margin_bottom_negative">Van Mourik Broekmanweg 6, 2628XE Delft</h5>
-<h5 class="add_margin_bottom_positive">The Netherlands, European Union</h5>
+<h5 class="add_margin_bottom_positive">The Netherlands</h5>
 
 <h6 class="add_margin_bottom_positive"><a href="mailto:v.k.p.dsouza@tudelft.nl">v.k.p.dsouza@tudelft.nl</a> &nbsp; <a href="tel:+31613880934">+31 613 880 934</a></h6>
 
@@ -57,6 +57,7 @@ Vivian Dsouza's Personal Webpage
 
 <p>I am a Ph.D Candidate supervised by <a href="https://pawelczak.net/" target="_blank">Dr. Przemysław Pawełczak</a> at the <a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/software-technology/embedded-systems" target="_blank"> Embedded systems group</a> at TU Delft.</p>
 
+<p>My research interests are at the intersection of machine learning and embedded systems. My research is focused on new ways to collect and process information from sensors in wearable devices.</p>
 </div>
 
 
