--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Vivian Dsouza's Personal Webpage
 
 <p>I am a Ph.D Candidate supervised by <a href="https://pawelczak.net/" target="_blank">Dr. Przemysław Pawełczak</a> at the <a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/software-technology/embedded-systems" target="_blank"> Embedded systems group</a> at TU Delft.</p>
 
-<p>My research interests are at the intersection of machine learning and embedded systems. My research is focused on new ways to collect and process information from sensors in wearable devices.</p>
+<p>My interests are at the intersection of machine learning and embedded systems. My research is focused on new ways to collect and process information from sensors in wearable devices.</p>
 </div>
 
 
@@ -65,7 +65,7 @@ Vivian Dsouza's Personal Webpage
 
 <h3>Publications</h3>
 
-<li>S.K. Ghiasi, V.Dsouza, K. Langendoen, M. Zuniga, <a class="text_italic" href="https://doi.org/10.1145/3583120.3586966" target="">SpectraLux: Towards Exploiting the Full Spectrum with Passive VLC</a>, Proc. <a class="text_bold" href="https://ipsn.acm.org/2023/" target="_blank">ACM/IEEE IPSN 2023</a></li>
+<li>S.K. Ghiasi*, V.Dsouza*, K. Langendoen, M. Zuniga, <a class="text_italic" href="https://doi.org/10.1145/3583120.3586966" target="">SpectraLux: Towards Exploiting the Full Spectrum with Passive VLC</a>, Proc. <a class="text_bold" href="https://ipsn.acm.org/2023/" target="_blank">ACM/IEEE IPSN 2023</a> (*equal contribution)</li>
   
 <ul>
 
