--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ Vivian Dsouza's Personal Webpage
 
 <div class="card">
 
-<p>I am a Ph.D Candidate supervised by <a href="https://pawelczak.net/" target="_blank">Dr. Przemysław Pawełczak</a> at the <a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/software-technology/embedded-systems" target="_blank"> Embedded systems group</a> at TU Delft.</p>
+<p>I am a Ph.D Candidate supervised by <a href="https://pawelczak.net/" target="_blank">dr. Przemysław Pawełczak</a> and <a href="https://www.st.ewi.tudelft.nl/koen/" target="_blank"></a>Prof. dr. Koen Langendoen at the <a href="https://www.tudelft.nl/ewi/over-de-faculteit/afdelingen/software-technology/embedded-systems" target="_blank"> Embedded systems group</a> at TU Delft.</p>
 
-<p>My interests are at the intersection of machine learning and embedded systems. My research is focused on new ways to collect and process information from sensors in wearable devices.</p>
+<p>My interests are at the intersection of machine learning and embedded systems. My research primarily revolves around the development and exploration of ultra-low power wearable devices, with a particular emphasis on the innovative realms of earable devices and oral sensing technologies. These devices are strategically designed to focus on sensing in the vicinity of the head, capitalizing on the wealth of information that can be gathered from this central region of the human body. By harnessing the potential of ultra-low power systems in these specialized wearables, we aim to not only redefine the way we interact with technology but also unlock previously untapped avenues of data collection and processing that hold immense promise for healthcare, lifestyle enhancement, and beyond.Earable devices, worn discreetly in or around the ear, have the potential to revolutionize how we gather data about vital signs, cognitive states, and even environmental factors. Similarly, oral sensing technologies, which can be seamlessly integrated into everyday objects, hold the promise of collecting valuable information about our health, nutrition, and hydration levels.</p>
 </div>
 
 
@@ -198,7 +198,7 @@ I am involved in the following courses at <a href="https://www.tudelft.nl/" targ
 
 <div class="card" id="footer">
 
-<p><span class="text_bold text_footer">Website adapted from:</span> <a class="text_footer" href="https://github.com/przemyslaw-pawelczak/przemyslaw-pawelczak.github.io" target="_blank">przemyslaw-pawelczak.github.io</a> &nbsp; <span class="text_bold text_footer">Last update:</span> <span class="text_footer">June 6, 2023</span></p>
+<p><span class="text_bold text_footer">Website adapted from:</span> <a class="text_footer" href="https://github.com/przemyslaw-pawelczak/przemyslaw-pawelczak.github.io" target="_blank">przemyslaw-pawelczak.github.io</a> &nbsp; <span class="text_bold text_footer">Last update:</span> <span class="text_footer">Oct 10, 2023</span></p>
 
 <div>
 
