added more papers

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ Vivian Dsouza's Personal Webpage
 <div class="card" id="section_publications">
 
 <h3>Publications</h3>
-
+<li>C.R.Reddy, V.Dsouza, A.Thangarajan, P. Pawełczak, F.Kawsar, A.Montanari<a class="text_italic" href="https://doi.org/10.1145/3708468.371189" target="">BioPulse: Towards Enabling Perpetual Vital Signs Monitoring using a Body Patch</a>, Proc. <a class="text_bold" href="https://dl.acm.org/doi/proceedings/10.1145/3708468" target="_blank">ACM HotMobile 2025</a></li>
+<li>V.Dsouza, J.Pronk, C.Peppelman, V.I.Madariaga, T.Pereira-Cenci, B.Loomans, P. Pawełczak<a class="text_italic" href="https://doi.org/10.1145/3699746" target="">Densor: An Intraoral Battery-Free Sensing Platform</a>, Proc. <a class="text_bold" href="https://dl.acm.org/toc/imwut/2024/8/4" target="_blank">ACM IMWUT 2024</a></li>
 <li>S.K. Ghiasi*, V.Dsouza*, K. Langendoen, M. Zuniga, <a class="text_italic" href="https://doi.org/10.1145/3583120.3586966" target="">SpectraLux: Towards Exploiting the Full Spectrum with Passive VLC</a>, Proc. <a class="text_bold" href="https://ipsn.acm.org/2023/" target="_blank">ACM/IEEE IPSN 2023</a> (*equal contribution)</li>
   
 <ul>
